@@ -55,8 +55,6 @@ import com.badlogic.gdx.utils.XmlReader.Element;
 public class TmxMapLoader extends AsynchronousAssetLoader<TiledMap, TmxMapLoader.Parameters> {
 
 	public static class Parameters extends AssetLoaderParameters<TiledMap> {
-		/** Whether to load the map for a y-up coordinate system */
-		public boolean yUp = true;
 		/** generate mipmaps? **/
 		public boolean generateMipMaps = false;
 		/** The TextureFilter to use for minification **/
@@ -74,7 +72,6 @@ public class TmxMapLoader extends AsynchronousAssetLoader<TiledMap, TmxMapLoader
 
 	protected XmlReader xml = new XmlReader();
 	protected Element root;
-	protected boolean yUp;
 	protected boolean convertObjectToTileSpace;
 
 	protected int mapTileWidth;
@@ -111,7 +108,6 @@ public class TmxMapLoader extends AsynchronousAssetLoader<TiledMap, TmxMapLoader
 	 * @return the TiledMap */
 	public TiledMap load (String fileName, TmxMapLoader.Parameters parameters) {
 		try {
-			this.yUp = parameters.yUp;
 			this.convertObjectToTileSpace = parameters.convertObjectToTileSpace;
 			FileHandle tmxFile = resolve(fileName);
 			root = xml.parse(tmxFile);
@@ -135,10 +131,8 @@ public class TmxMapLoader extends AsynchronousAssetLoader<TiledMap, TmxMapLoader
 		map = null;
 
 		if (parameter != null) {
-			yUp = parameter.yUp;
 			convertObjectToTileSpace = parameter.convertObjectToTileSpace;
 		} else {
-			yUp = true;
 			convertObjectToTileSpace = false;
 		}
 		try {
@@ -351,13 +345,10 @@ public class TmxMapLoader extends AsynchronousAssetLoader<TiledMap, TmxMapLoader
 			for (int y = margin; y <= stopHeight; y += tileheight + spacing) {
 				for (int x = margin; x <= stopWidth; x += tilewidth + spacing) {
 					TextureRegion tileRegion = new TextureRegion(texture, x, y, tilewidth, tileheight);
-					if (!yUp) {
-						tileRegion.flip(false, true);
-					}
 					TiledMapTile tile = new StaticTiledMapTile(tileRegion);
 					tile.setId(id);
 					tile.setOffsetX(offsetX);
-					tile.setOffsetY(yUp ? -offsetY : offsetY);
+					tile.setOffsetY(-offsetY);
 					tileset.putTile(id++, tile);
 				}
 			}
@@ -421,7 +412,7 @@ public class TmxMapLoader extends AsynchronousAssetLoader<TiledMap, TmxMapLoader
 					if (tile != null) {
 						Cell cell = createTileLayerCell(flipHorizontally, flipVertically, flipDiagonally);
 						cell.setTile(tile);
-						layer.setCell(x, yUp ? height - 1 - y : y, cell);
+						layer.setCell(x, height - 1 - y, cell);
 					}
 				}
 			}
@@ -460,7 +451,7 @@ public class TmxMapLoader extends AsynchronousAssetLoader<TiledMap, TmxMapLoader
 			float scaleY = convertObjectToTileSpace ? 1.0f / mapTileHeight : 1.0f;
 
 			float x = element.getFloatAttribute("x", 0) * scaleX;
-			float y = (yUp ? mapHeightInPixels - element.getFloatAttribute("y", 0) : element.getFloatAttribute("y", 0)) * scaleY;
+			float y = (mapHeightInPixels - element.getFloatAttribute("y", 0)) * scaleY;
 
 			float width = element.getFloatAttribute("width", 0) * scaleX;
 			float height = element.getFloatAttribute("height", 0) * scaleY;
@@ -473,10 +464,7 @@ public class TmxMapLoader extends AsynchronousAssetLoader<TiledMap, TmxMapLoader
 					for (int i = 0; i < points.length; i++) {
 						String[] point = points[i].split(",");
 						vertices[i * 2] = Float.parseFloat(point[0]) * scaleX;
-						vertices[i * 2 + 1] = Float.parseFloat(point[1]) * scaleY;
-						if (yUp) {
-							vertices[i * 2 + 1] *= -1;
-						}
+						vertices[i * 2 + 1] = -Float.parseFloat(point[1]) * scaleY;
 					}
 					Polygon polygon = new Polygon(vertices);
 					polygon.setPosition(x, y);
@@ -487,20 +475,17 @@ public class TmxMapLoader extends AsynchronousAssetLoader<TiledMap, TmxMapLoader
 					for (int i = 0; i < points.length; i++) {
 						String[] point = points[i].split(",");
 						vertices[i * 2] = Float.parseFloat(point[0]) * scaleX;
-						vertices[i * 2 + 1] = Float.parseFloat(point[1]) * scaleY;
-						if (yUp) {
-							vertices[i * 2 + 1] *= -1;
-						}
+						vertices[i * 2 + 1] = -Float.parseFloat(point[1]) * scaleY;
 					}
 					Polyline polyline = new Polyline(vertices);
 					polyline.setPosition(x, y);
 					object = new PolylineMapObject(polyline);
 				} else if ((child = element.getChildByName("ellipse")) != null) {
-					object = new EllipseMapObject(x, yUp ? y - height : y, width, height);
+					object = new EllipseMapObject(x, y - height, width, height);
 				}
 			}
 			if (object == null) {
-				object = new RectangleMapObject(x, yUp ? y - height : y, width, height);
+				object = new RectangleMapObject(x, y - height, width, height);
 			}
 			object.setName(element.getAttribute("name", null));
 			String type = element.getAttribute("type", null);
@@ -512,7 +497,7 @@ public class TmxMapLoader extends AsynchronousAssetLoader<TiledMap, TmxMapLoader
 				object.getProperties().put("gid", gid);
 			}
 			object.getProperties().put("x", x * scaleX);
-			object.getProperties().put("y", (yUp ? y - height : y) * scaleY);
+			object.getProperties().put("y", (y - height) * scaleY);
 			object.setVisible(element.getIntAttribute("visible", 1) == 1);
 			Element properties = element.getChildByName("properties");
 			if (properties != null) {
@@ -540,14 +525,14 @@ public class TmxMapLoader extends AsynchronousAssetLoader<TiledMap, TmxMapLoader
 		if (flipDiagonally) {
 			if (flipHorizontally && flipVertically) {
 				cell.setFlipHorizontally(true);
-				cell.setRotation(yUp ? Cell.ROTATE_270 : Cell.ROTATE_90);
+				cell.setRotation(Cell.ROTATE_270);
 			} else if (flipHorizontally) {
-				cell.setRotation(yUp ? Cell.ROTATE_270 : Cell.ROTATE_90);
+				cell.setRotation(Cell.ROTATE_270);
 			} else if (flipVertically) {
-				cell.setRotation(yUp ? Cell.ROTATE_90 : Cell.ROTATE_270);
+				cell.setRotation(Cell.ROTATE_90);
 			} else {
 				cell.setFlipVertically(true);
-				cell.setRotation(yUp ? Cell.ROTATE_270 : Cell.ROTATE_90);
+				cell.setRotation(Cell.ROTATE_270);
 			}
 		} else {
 			cell.setFlipHorizontally(flipHorizontally);
